--- a/linearregression.ipynb
+++ b/linearregression.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "93335158",
+   "id": "c1436799",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "papermill": {
-     "duration": 0.004467,
-     "end_time": "2023-04-24T08:34:45.743119",
+     "duration": 0.005663,
+     "end_time": "2023-04-25T00:55:42.034887",
      "exception": false,
-     "start_time": "2023-04-24T08:34:45.738652",
+     "start_time": "2023-04-25T00:55:42.029224",
      "status": "completed"
     },
     "tags": []
@@ -25,20 +25,20 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fd145d2c",
+   "id": "fb4192e1",
    "metadata": {
     "_kg_hide-input": true,
     "execution": {
-     "iopub.execute_input": "2023-04-24T08:34:45.752851Z",
-     "iopub.status.busy": "2023-04-24T08:34:45.752454Z",
-     "iopub.status.idle": "2023-04-24T08:34:47.012046Z",
-     "shell.execute_reply": "2023-04-24T08:34:47.010757Z"
+     "iopub.execute_input": "2023-04-25T00:55:42.048423Z",
+     "iopub.status.busy": "2023-04-25T00:55:42.047883Z",
+     "iopub.status.idle": "2023-04-25T00:55:43.121349Z",
+     "shell.execute_reply": "2023-04-25T00:55:43.120045Z"
     },
     "papermill": {
-     "duration": 1.268189,
-     "end_time": "2023-04-24T08:34:47.015103",
+     "duration": 1.08535,
+     "end_time": "2023-04-25T00:55:43.124352",
      "exception": false,
-     "start_time": "2023-04-24T08:34:45.746914",
+     "start_time": "2023-04-25T00:55:42.039002",
      "status": "completed"
     },
     "tags": []
@@ -47,25 +47,28 @@
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
     "import pandas as pd \n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.metrics import mean_absolute_error as mae\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bf3d1eb2",
+   "id": "40adfdc4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-24T08:34:47.023745Z",
-     "iopub.status.busy": "2023-04-24T08:34:47.023270Z",
-     "iopub.status.idle": "2023-04-24T08:34:47.189784Z",
-     "shell.execute_reply": "2023-04-24T08:34:47.188585Z"
+     "iopub.execute_input": "2023-04-25T00:55:43.133015Z",
+     "iopub.status.busy": "2023-04-25T00:55:43.132024Z",
+     "iopub.status.idle": "2023-04-25T00:55:43.292496Z",
+     "shell.execute_reply": "2023-04-25T00:55:43.291108Z"
     },
     "papermill": {
-     "duration": 0.174955,
-     "end_time": "2023-04-24T08:34:47.193647",
+     "duration": 0.168234,
+     "end_time": "2023-04-25T00:55:43.296030",
      "exception": false,
-     "start_time": "2023-04-24T08:34:47.018692",
+     "start_time": "2023-04-25T00:55:43.127796",
      "status": "completed"
     },
     "tags": []
@@ -455,19 +458,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c359bf8e",
+   "id": "23d4572e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-24T08:34:47.203763Z",
-     "iopub.status.busy": "2023-04-24T08:34:47.203306Z",
-     "iopub.status.idle": "2023-04-24T08:34:47.227965Z",
-     "shell.execute_reply": "2023-04-24T08:34:47.226749Z"
+     "iopub.execute_input": "2023-04-25T00:55:43.306267Z",
+     "iopub.status.busy": "2023-04-25T00:55:43.305443Z",
+     "iopub.status.idle": "2023-04-25T00:55:43.329306Z",
+     "shell.execute_reply": "2023-04-25T00:55:43.328444Z"
     },
     "papermill": {
-     "duration": 0.033335,
-     "end_time": "2023-04-24T08:34:47.231192",
+     "duration": 0.031194,
+     "end_time": "2023-04-25T00:55:43.331538",
      "exception": false,
-     "start_time": "2023-04-24T08:34:47.197857",
+     "start_time": "2023-04-25T00:55:43.300344",
      "status": "completed"
     },
     "tags": []
@@ -687,19 +690,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d7f457b5",
+   "id": "91188d16",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-24T08:34:47.242304Z",
-     "iopub.status.busy": "2023-04-24T08:34:47.241918Z",
-     "iopub.status.idle": "2023-04-24T08:34:47.271628Z",
-     "shell.execute_reply": "2023-04-24T08:34:47.270191Z"
+     "iopub.execute_input": "2023-04-25T00:55:43.341479Z",
+     "iopub.status.busy": "2023-04-25T00:55:43.341121Z",
+     "iopub.status.idle": "2023-04-25T00:55:43.366611Z",
+     "shell.execute_reply": "2023-04-25T00:55:43.365017Z"
     },
     "papermill": {
-     "duration": 0.038486,
-     "end_time": "2023-04-24T08:34:47.274385",
+     "duration": 0.033396,
+     "end_time": "2023-04-25T00:55:43.369208",
      "exception": false,
-     "start_time": "2023-04-24T08:34:47.235899",
+     "start_time": "2023-04-25T00:55:43.335812",
      "status": "completed"
     },
     "tags": []
@@ -747,19 +750,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c1d08872",
+   "id": "d0d510ed",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-24T08:34:47.285652Z",
-     "iopub.status.busy": "2023-04-24T08:34:47.284918Z",
-     "iopub.status.idle": "2023-04-24T08:34:47.370448Z",
-     "shell.execute_reply": "2023-04-24T08:34:47.369175Z"
+     "iopub.execute_input": "2023-04-25T00:55:43.379921Z",
+     "iopub.status.busy": "2023-04-25T00:55:43.379124Z",
+     "iopub.status.idle": "2023-04-25T00:55:43.461259Z",
+     "shell.execute_reply": "2023-04-25T00:55:43.460081Z"
     },
     "papermill": {
-     "duration": 0.09423,
-     "end_time": "2023-04-24T08:34:47.373109",
+     "duration": 0.090272,
+     "end_time": "2023-04-25T00:55:43.463853",
      "exception": false,
-     "start_time": "2023-04-24T08:34:47.278879",
+     "start_time": "2023-04-25T00:55:43.373581",
      "status": "completed"
     },
     "tags": []
@@ -1051,19 +1054,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2b61c8ea",
+   "id": "f98e7224",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-24T08:34:47.385283Z",
-     "iopub.status.busy": "2023-04-24T08:34:47.384481Z",
-     "iopub.status.idle": "2023-04-24T08:34:47.444179Z",
-     "shell.execute_reply": "2023-04-24T08:34:47.443264Z"
+     "iopub.execute_input": "2023-04-25T00:55:43.474961Z",
+     "iopub.status.busy": "2023-04-25T00:55:43.474571Z",
+     "iopub.status.idle": "2023-04-25T00:55:43.535069Z",
+     "shell.execute_reply": "2023-04-25T00:55:43.533861Z"
     },
     "papermill": {
-     "duration": 0.068439,
-     "end_time": "2023-04-24T08:34:47.446621",
+     "duration": 0.068855,
+     "end_time": "2023-04-25T00:55:43.537581",
      "exception": false,
-     "start_time": "2023-04-24T08:34:47.378182",
+     "start_time": "2023-04-25T00:55:43.468726",
      "status": "completed"
     },
     "tags": []
@@ -1678,13 +1681,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74b037b2",
+   "id": "b85b74ff",
    "metadata": {
     "papermill": {
-     "duration": 0.005058,
-     "end_time": "2023-04-24T08:34:47.457533",
+     "duration": 0.005088,
+     "end_time": "2023-04-25T00:55:43.548309",
      "exception": false,
-     "start_time": "2023-04-24T08:34:47.452475",
+     "start_time": "2023-04-25T00:55:43.543221",
      "status": "completed"
     },
     "tags": []
@@ -1697,19 +1700,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4d30ad9d",
+   "id": "9898734e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-24T08:34:47.470686Z",
-     "iopub.status.busy": "2023-04-24T08:34:47.469908Z",
-     "iopub.status.idle": "2023-04-24T08:35:02.226522Z",
-     "shell.execute_reply": "2023-04-24T08:35:02.224124Z"
+     "iopub.execute_input": "2023-04-25T00:55:43.560885Z",
+     "iopub.status.busy": "2023-04-25T00:55:43.560401Z",
+     "iopub.status.idle": "2023-04-25T00:55:58.690525Z",
+     "shell.execute_reply": "2023-04-25T00:55:58.689248Z"
     },
     "papermill": {
-     "duration": 14.768783,
-     "end_time": "2023-04-24T08:35:02.231568",
+     "duration": 15.140727,
+     "end_time": "2023-04-25T00:55:58.694354",
      "exception": false,
-     "start_time": "2023-04-24T08:34:47.462785",
+     "start_time": "2023-04-25T00:55:43.553627",
      "status": "completed"
     },
     "tags": []
@@ -1723,6 +1726,8 @@
     "X = np.array(X).reshape(1, -1)\n",
     "\n",
     "y = np.array(y).reshape(1, -1)\n",
+    "\n",
+    "\n",
     "# Initialize Linear Regression Model and train\n",
     "# 선형 회귀 모델 초기화 및 훈련\n",
     "regr = LinearRegression()\n",
@@ -1735,13 +1740,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02f6c52b",
+   "id": "42a15e8c",
    "metadata": {
     "papermill": {
-     "duration": 0.013108,
-     "end_time": "2023-04-24T08:35:02.258508",
+     "duration": 0.00831,
+     "end_time": "2023-04-25T00:55:58.712223",
      "exception": false,
-     "start_time": "2023-04-24T08:35:02.245400",
+     "start_time": "2023-04-25T00:55:58.703913",
      "status": "completed"
     },
     "tags": []
@@ -1753,39 +1758,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "068f238b",
+   "execution_count": null,
+   "id": "9f99982d",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-04-24T08:35:02.289791Z",
-     "iopub.status.busy": "2023-04-24T08:35:02.288939Z",
-     "iopub.status.idle": "2023-04-24T08:35:02.310281Z",
-     "shell.execute_reply": "2023-04-24T08:35:02.308429Z"
-    },
     "papermill": {
-     "duration": 0.043873,
-     "end_time": "2023-04-24T08:35:02.316006",
+     "duration": 0.00885,
+     "end_time": "2023-04-25T00:55:58.729599",
      "exception": false,
-     "start_time": "2023-04-24T08:35:02.272133",
+     "start_time": "2023-04-25T00:55:58.720749",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[221900., 538000., 180000., ..., 402101., 400000., 325000.]])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predictions"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1808,14 +1794,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 27.905054,
-   "end_time": "2023-04-24T08:35:03.060014",
+   "duration": 26.925202,
+   "end_time": "2023-04-25T00:55:58.976409",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2023-04-24T08:34:35.154960",
+   "start_time": "2023-04-25T00:55:32.051207",
    "version": "2.4.0"
   }
  },
