Kaggle Notebook | LinearRegression | Version 7

--- a/linearregression.ipynb
+++ b/linearregression.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c1436799",
+   "id": "f7925c7f",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "papermill": {
-     "duration": 0.005663,
-     "end_time": "2023-04-25T00:55:42.034887",
+     "duration": 0.005817,
+     "end_time": "2023-05-15T23:57:55.762840",
      "exception": false,
-     "start_time": "2023-04-25T00:55:42.029224",
+     "start_time": "2023-05-15T23:57:55.757023",
      "status": "completed"
     },
     "tags": []
@@ -25,20 +25,20 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fb4192e1",
+   "id": "c843b083",
    "metadata": {
     "_kg_hide-input": true,
     "execution": {
-     "iopub.execute_input": "2023-04-25T00:55:42.048423Z",
-     "iopub.status.busy": "2023-04-25T00:55:42.047883Z",
-     "iopub.status.idle": "2023-04-25T00:55:43.121349Z",
-     "shell.execute_reply": "2023-04-25T00:55:43.120045Z"
+     "iopub.execute_input": "2023-05-15T23:57:55.774694Z",
+     "iopub.status.busy": "2023-05-15T23:57:55.774241Z",
+     "iopub.status.idle": "2023-05-15T23:57:56.991798Z",
+     "shell.execute_reply": "2023-05-15T23:57:56.990663Z"
     },
     "papermill": {
-     "duration": 1.08535,
-     "end_time": "2023-04-25T00:55:43.124352",
+     "duration": 1.227054,
+     "end_time": "2023-05-15T23:57:56.994839",
      "exception": false,
-     "start_time": "2023-04-25T00:55:42.039002",
+     "start_time": "2023-05-15T23:57:55.767785",
      "status": "completed"
     },
     "tags": []
@@ -54,21 +54,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "87ec1395",
+   "metadata": {
+    "papermill": {
+     "duration": 0.004154,
+     "end_time": "2023-05-15T23:57:57.004029",
+     "exception": false,
+     "start_time": "2023-05-15T23:57:56.999875",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "<a id=\"step-one\"></a>\n",
+    "# Step 1: Exploratory Data Analysis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "40adfdc4",
+   "id": "4150ebc5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-25T00:55:43.133015Z",
-     "iopub.status.busy": "2023-04-25T00:55:43.132024Z",
-     "iopub.status.idle": "2023-04-25T00:55:43.292496Z",
-     "shell.execute_reply": "2023-04-25T00:55:43.291108Z"
+     "iopub.execute_input": "2023-05-15T23:57:57.014743Z",
+     "iopub.status.busy": "2023-05-15T23:57:57.014339Z",
+     "iopub.status.idle": "2023-05-15T23:57:57.208801Z",
+     "shell.execute_reply": "2023-05-15T23:57:57.207425Z"
     },
     "papermill": {
-     "duration": 0.168234,
-     "end_time": "2023-04-25T00:55:43.296030",
+     "duration": 0.204022,
+     "end_time": "2023-05-15T23:57:57.212497",
      "exception": false,
-     "start_time": "2023-04-25T00:55:43.127796",
+     "start_time": "2023-05-15T23:57:57.008475",
      "status": "completed"
     },
     "tags": []
@@ -458,19 +476,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "23d4572e",
+   "id": "49b3da51",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-25T00:55:43.306267Z",
-     "iopub.status.busy": "2023-04-25T00:55:43.305443Z",
-     "iopub.status.idle": "2023-04-25T00:55:43.329306Z",
-     "shell.execute_reply": "2023-04-25T00:55:43.328444Z"
+     "iopub.execute_input": "2023-05-15T23:57:57.224915Z",
+     "iopub.status.busy": "2023-05-15T23:57:57.224446Z",
+     "iopub.status.idle": "2023-05-15T23:57:57.252289Z",
+     "shell.execute_reply": "2023-05-15T23:57:57.250925Z"
     },
     "papermill": {
-     "duration": 0.031194,
-     "end_time": "2023-04-25T00:55:43.331538",
+     "duration": 0.03728,
+     "end_time": "2023-05-15T23:57:57.255111",
      "exception": false,
-     "start_time": "2023-04-25T00:55:43.300344",
+     "start_time": "2023-05-15T23:57:57.217831",
      "status": "completed"
     },
     "tags": []
@@ -690,19 +708,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "91188d16",
+   "id": "72dddbcf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-25T00:55:43.341479Z",
-     "iopub.status.busy": "2023-04-25T00:55:43.341121Z",
-     "iopub.status.idle": "2023-04-25T00:55:43.366611Z",
-     "shell.execute_reply": "2023-04-25T00:55:43.365017Z"
+     "iopub.execute_input": "2023-05-15T23:57:57.268885Z",
+     "iopub.status.busy": "2023-05-15T23:57:57.268480Z",
+     "iopub.status.idle": "2023-05-15T23:57:57.298059Z",
+     "shell.execute_reply": "2023-05-15T23:57:57.297133Z"
     },
     "papermill": {
-     "duration": 0.033396,
-     "end_time": "2023-04-25T00:55:43.369208",
+     "duration": 0.040306,
+     "end_time": "2023-05-15T23:57:57.301151",
      "exception": false,
-     "start_time": "2023-04-25T00:55:43.335812",
+     "start_time": "2023-05-15T23:57:57.260845",
      "status": "completed"
     },
     "tags": []
@@ -750,19 +768,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d0d510ed",
+   "id": "f62fb984",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-25T00:55:43.379921Z",
-     "iopub.status.busy": "2023-04-25T00:55:43.379124Z",
-     "iopub.status.idle": "2023-04-25T00:55:43.461259Z",
-     "shell.execute_reply": "2023-04-25T00:55:43.460081Z"
+     "iopub.execute_input": "2023-05-15T23:57:57.315493Z",
+     "iopub.status.busy": "2023-05-15T23:57:57.314262Z",
+     "iopub.status.idle": "2023-05-15T23:57:57.405583Z",
+     "shell.execute_reply": "2023-05-15T23:57:57.404277Z"
     },
     "papermill": {
-     "duration": 0.090272,
-     "end_time": "2023-04-25T00:55:43.463853",
+     "duration": 0.101408,
+     "end_time": "2023-05-15T23:57:57.408389",
      "exception": false,
-     "start_time": "2023-04-25T00:55:43.373581",
+     "start_time": "2023-05-15T23:57:57.306981",
      "status": "completed"
     },
     "tags": []
@@ -1054,19 +1072,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f98e7224",
+   "id": "44b27331",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-25T00:55:43.474961Z",
-     "iopub.status.busy": "2023-04-25T00:55:43.474571Z",
-     "iopub.status.idle": "2023-04-25T00:55:43.535069Z",
-     "shell.execute_reply": "2023-04-25T00:55:43.533861Z"
+     "iopub.execute_input": "2023-05-15T23:57:57.422804Z",
+     "iopub.status.busy": "2023-05-15T23:57:57.422040Z",
+     "iopub.status.idle": "2023-05-15T23:57:57.489256Z",
+     "shell.execute_reply": "2023-05-15T23:57:57.487950Z"
     },
     "papermill": {
-     "duration": 0.068855,
-     "end_time": "2023-04-25T00:55:43.537581",
+     "duration": 0.077717,
+     "end_time": "2023-05-15T23:57:57.492347",
      "exception": false,
-     "start_time": "2023-04-25T00:55:43.468726",
+     "start_time": "2023-05-15T23:57:57.414630",
      "status": "completed"
     },
     "tags": []
@@ -1681,13 +1699,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b85b74ff",
+   "id": "060a1ea3",
    "metadata": {
     "papermill": {
-     "duration": 0.005088,
-     "end_time": "2023-04-25T00:55:43.548309",
+     "duration": 0.006848,
+     "end_time": "2023-05-15T23:57:57.506600",
      "exception": false,
-     "start_time": "2023-04-25T00:55:43.543221",
+     "start_time": "2023-05-15T23:57:57.499752",
      "status": "completed"
     },
     "tags": []
@@ -1700,19 +1718,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9898734e",
+   "id": "32c8f243",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-25T00:55:43.560885Z",
-     "iopub.status.busy": "2023-04-25T00:55:43.560401Z",
-     "iopub.status.idle": "2023-04-25T00:55:58.690525Z",
-     "shell.execute_reply": "2023-04-25T00:55:58.689248Z"
+     "iopub.execute_input": "2023-05-15T23:57:57.522822Z",
+     "iopub.status.busy": "2023-05-15T23:57:57.522086Z",
+     "iopub.status.idle": "2023-05-15T23:58:12.585218Z",
+     "shell.execute_reply": "2023-05-15T23:58:12.583259Z"
     },
     "papermill": {
-     "duration": 15.140727,
-     "end_time": "2023-04-25T00:55:58.694354",
+     "duration": 15.076863,
+     "end_time": "2023-05-15T23:58:12.590452",
      "exception": false,
-     "start_time": "2023-04-25T00:55:43.553627",
+     "start_time": "2023-05-15T23:57:57.513589",
      "status": "completed"
     },
     "tags": []
@@ -1740,13 +1758,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42a15e8c",
+   "id": "6f37d5a8",
    "metadata": {
     "papermill": {
-     "duration": 0.00831,
-     "end_time": "2023-04-25T00:55:58.712223",
+     "duration": 0.015136,
+     "end_time": "2023-05-15T23:58:12.622169",
      "exception": false,
-     "start_time": "2023-04-25T00:55:58.703913",
+     "start_time": "2023-05-15T23:58:12.607033",
      "status": "completed"
     },
     "tags": []
@@ -1759,13 +1777,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f99982d",
+   "id": "3f93b8c2",
    "metadata": {
     "papermill": {
-     "duration": 0.00885,
-     "end_time": "2023-04-25T00:55:58.729599",
+     "duration": 0.014528,
+     "end_time": "2023-05-15T23:58:12.652188",
      "exception": false,
-     "start_time": "2023-04-25T00:55:58.720749",
+     "start_time": "2023-05-15T23:58:12.637660",
      "status": "completed"
     },
     "tags": []
@@ -1794,14 +1812,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 26.925202,
-   "end_time": "2023-04-25T00:55:58.976409",
+   "duration": 30.589902,
+   "end_time": "2023-05-15T23:58:13.493804",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2023-04-25T00:55:32.051207",
+   "start_time": "2023-05-15T23:57:42.903902",
    "version": "2.4.0"
   }
  },
